Avoid PermGen OOM