@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.9</version>
+        <version>2.19</version>
     </parent>
 
     <artifactId>openstack-cloud</artifactId>
@@ -108,6 +108,13 @@
                     <artifactId>maven-hpi-plugin</artifactId>
                     <configuration>
                         <pluginFirstClassLoader>true</pluginFirstClassLoader>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>-XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
             </plugins>
